k8s-security-framework/policies/resource-governance/KSP-RES-006/tests/boundary-invalid-environment-uppercase.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: res-006-invalid-environment-uppercase
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: DEV
