k8s-security-framework/policies/resource-governance/KSP-RES-006/tests/boundary-opted-in-development-namespace-generated.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: container-resource-defaults
  namespace: res-006-boundary
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/generated-by: ksp-res-006
spec:
  limits:
  - type: Container
    defaultRequest:
      cpu: 100m
      memory: 128Mi
    default:
      cpu: 500m
      memory: 512Mi
    min:
      cpu: 25m
      memory: 32Mi
    max:
      cpu: '2'
      memory: 2Gi
