k8s-security-framework/policies/resource-governance/KSP-RES-006/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-res-006-exception
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-res-006-exception-similar
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: staging
