k8s-security-framework/policies/resource-governance/KSP-RES-006/tests/positive-production-namespace-generated.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: container-resource-defaults
  namespace: res-006-positive-production
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/generated-by: ksp-res-006
    policies.ksp.io/environment: production
spec:
  limits:
  - type: Container
    defaultRequest:
      cpu: "500m"
      memory: "512Mi"
    default:
      cpu: "1"
      memory: "1Gi"
    min:
      cpu: "100m"
      memory: "128Mi"
    max:
      cpu: "4"
      memory: "4Gi"
