k8s-security-framework/policies/resource-governance/KSP-RES-006/tests/positive-staging-namespace-generated.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: container-resource-defaults
  namespace: res-006-positive-staging
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/generated-by: ksp-res-006
    policies.ksp.io/environment: staging
spec:
  limits:
  - type: Container
    defaultRequest:
      cpu: "200m"
      memory: "256Mi"
    default:
      cpu: "1"
      memory: "1Gi"
    min:
      cpu: "50m"
      memory: "64Mi"
    max:
      cpu: "2"
      memory: "2Gi"
