k8s-security-framework/policies/resource-governance/KSP-RES-006/tests/positive-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: res-006-positive-staging
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/environment: staging
